maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:5: error: not found: value x
    	x=random3()
        ^RandomMouseMaze:6: error: not found: value x
    	if (x==0){
            ^RandomMouseMaze:11: error: not found: value x
    	if (x==1){
            ^RandomMouseMaze:14: error: not found: value x
    	if (x==2){
            ^