maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
override def run() {
    // Your code here 
    while (estSurBiscuit==false){
    	x=random3()
    	if (x==0){
    		if(estFaceMur==false){
    			avance();
    		}
    	}
    	if (x==1){
    		gauche();
    	}
    	if (x==2){
    		droite();
    	}
    }
}
